#2jwv42 - fix product display behind drawer

--- a/styles/base/state.scss
+++ b/styles/base/state.scss
@@ -9,4 +9,5 @@
 .de-content-is-fixed {
   overflow: hidden; /* 1 */
   position: fixed; /* 1 */
+  width: 100%;
 }
